# luks-forensic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: af_merge.rs  luks1_header.rs  luks2_header.rs  unlock.rs
core/src/: af.rs  bytes.rs  crypto.rs  error.rs  header.rs  header2.rs  lib.rs  vfs.rs  volume.rs
core/tests/: oracle_luks1.rs  oracle_luks2.rs  oracle_vfs.rs
docs/: PRD.md  RESEARCH.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-two-crate-reader-analyzer-split.md  0002-crate-naming-under-taken-bare-name.md  0003-forbid-unsafe-panic-free-readers.md  0004-forensic-vfs-encryption-layer-adapter.md  0005-audited-rustcrypto-af-merge-bespoke.md  0006-scope-aes-xts-plain64-refuse-loudly.md  0007-tier2-cryptsetup-oracle-validation.md  0008-low-published-library-msrv-floor.md
forensic/: Cargo.toml
forensic/src/: lib.rs  tests.rs
supply-chain/: config.toml
tests/data/: README.md
