[package]
name         = "luks-core"
description   = "Pure-Rust LUKS1/LUKS2 reader and decryptor — parse the on-disk header, derive the master key, and decrypt the payload. Panic-free, no unsafe."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
readme       = "../README.md"
keywords     = ["luks", "forensics", "dm-crypt", "encryption", "cryptsetup"]
categories   = ["cryptography", "filesystem", "parser-implementations"]

[lib]
name = "luks"

[features]
default = []
# forensic-vfs EncryptionLayer contract (optional): present a decrypted LUKS payload
# as an ImageSource. Behind the `vfs` feature (ADR 0004). The decryption is
# luks-core's own audited RustCrypto (AES-XTS + PBKDF2/Argon2); this only wires it.
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
forensic-vfs = { version = "0.7", optional = true }
aes       = { workspace = true }
xts-mode  = { workspace = true }
sha1      = { workspace = true }
sha2      = { workspace = true }
hmac      = { workspace = true }
pbkdf2    = { workspace = true }
argon2    = { workspace = true }
serde_json = { workspace = true }
base64    = { workspace = true }

[lints]
workspace = true
